--- a/index.html
+++ b/index.html
@@ -106,6 +106,90 @@
                 <button class="button">LEARN MORE</button>
             </div>
         </section>
+        <section class="brands">
+            <h2 class="hidden">Brands</h2>
+            <ul>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+            </ul>    
+        </section>
+        <section class="about">
+            <h1>Design Life Kids</h1>
+            <h2>About Us</h2>
+            <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+            <a href="" class="button">buy now</a>
+        </section>
+        <section class="contacts">
+            <h1>Contacts</h1>
+            <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+            <img src="" alt="">
+        </section>
     </main>
+    <footer>
+        <section class="navigation">
+            <h2>Navigation</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">About Us</a></li> 
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Design Services</a></li>
+                    <li><a href="#">Featured On</a></li> 
+                    <li><a href="#">2018 Holiday Catalog</a></li>
+                    <li><a href="#">Shop By Designer</a></li>       
+                </ul>
+            </nav>
+        </section>
+        <section class="customer">
+            <h2>Customer Information</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">Contact Us</a></li> 
+                    <li><a href="#">Sale Exclusions</a></li>
+                    <li><a href="#">Shipping & Returns</a></li>
+                    <li><a href="#">Terms & Conditions</a></li> 
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Search</a></li>       
+                </ul>
+            </nav>
+        </section>
+        <section class="connect">
+            <div class="form">
+                <p><input name="mail" type="email" placeholder="Email"></p>
+                <button class="button">Join</button>
+            </div>
+            <ul class="social">
+                <li><a href="" target="_blanK">
+                    <img src="" alt="">
+                    </a>
+                </li>
+                <li><a href="" target="_blanK">
+                    <img src="" alt="">
+                    </a>
+                </li>
+                <li><a href="" target="_blanK">
+                    <img src="" alt="">
+                    </a>
+                </li>
+                <li><a href="" target="_blanK">
+                    <img src="" alt="">
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section class="copyright">
+            <div class="rating">
+                <h2>Company Rating</h2>
+                <img src alt="">
+                <img src alt="">
+                <img src alt="">
+                <img src alt="">
+            </div>
+            
+            <h2>Copyright © 2018 Dlk • Design Life Kids</h2>
+            <h2>Web Design — Direct Line Development</h2>
+        </section>
+    </footer>
 </body>
 </html>
