--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="" class="logo">
+        <img src="img.png" alt="" class="logo">
         <nav>
             <ul>
                 <li><a href="#">Blog</a></li> 
@@ -14,7 +14,7 @@
                 <li><a href="#">About us</a></li>       
             </ul>
         </nav>
-        <img src="" alt="" class="search">
+        <img src="img.png" alt="" class="search">
         <a href="#">Contact us</a>
     </header>
     <main>
@@ -22,10 +22,10 @@
             <h1>THE OOH NOO COLLECTION</h1>
             <p>Designed in Slovenia</p>
             <button class="button">EXPLORE NOW</button>
-            <img src="" alt="" class="slide1">
-            <img src="" alt="" class="slide2">
-            <img src="" alt="" class="slide3">
-            <img src="" alt="" class="slide4">
+            <img src="img.png" alt="" class="slide1">
+            <img src="img.png" alt="" class="slide2">
+            <img src="img.png" alt="" class="slide3">
+            <img src="img.png" alt="" class="slide4">
             <div>
                 <p>Free (continental) USA shipping on all orders of $100 USD or more!</p>
             </div>
@@ -35,7 +35,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src alt="">
+                        <img src="img.png" alt="">
                     </a>
                     <a href="#">
                         <p>APPAREL KIDS</p>
@@ -43,7 +43,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <img src alt="">
+                        <img src="img.png" alt="">
                     </a>
                     <a href="#">
                         <p>HOLIDAY SHOP</p>
@@ -51,7 +51,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <img src alt="">
+                        <img src="img.png" alt="">
                     </a>
                     <a href="#">
                         <p>TOYS</p>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <img src alt="">
+                        <img src="img.png" alt="">
                     </a>
                     <a href="#">
                         <p>ACCESSORIES</p>
@@ -67,15 +67,15 @@
                 </li>
             </ul>
             <div>
-                <img src alt="">
+                <img src="img.png" alt="">
             </div>
             <div>
-                <img src alt="">
+                <img src="img.png" alt="">
             </div>
             <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
         </section>
         <section class="delivery">
-            <img src alt="">
+            <img src="img.png" alt="">
             <div>
                 <h1>Delivery</h1>
                 <div class="tabs">
@@ -91,40 +91,40 @@
                     <label for="tab-third">
                         <p>Credit</p>
                     </label>
-                <div id="tab-content-1" class="tab-content">
-                        <p><!-- Тут вы размещаете контент под таб№1 --></p>
-                </div> <!-- #tab-content-1 -->
-                <div id="tab-content-2" class="tab-content">
-                    <p><!-- Тут вы размещаете контент под таб№2 --></p>
-                </div> <!-- #tab-content-2 -->
-                <div id="tab-content-3" class="tab-content">
-                    <p><!-- Тут вы размещаете контент под таб№3 --></p>
-                </div> <!-- #tab-content-1 -->
+                    <div id="tab-content-1" class="tab-content">
+                        <p>content-1</p>
+                    </div> 
+                    <div id="tab-content-2" class="tab-content">
+                        <p>content-2</p>
+                    </div> 
+                    <div id="tab-content-3" class="tab-content">
+                        <p>content-3</p>
+                    </div> 
                 </div>
-                <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-                <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
+                    <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+                    <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                 <button class="button">LEARN MORE</button>
             </div>
         </section>
         <section class="brands">
             <h2 class="hidden">Brands</h2>
             <ul>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
+                <li><img src="img.png" alt=""></li>
+                <li><img src="img.png" alt=""></li>
+                <li><img src="img.png" alt=""></li>
+                <li><img src="img.png" alt=""></li>
             </ul>    
         </section>
         <section class="about">
             <h1>Design Life Kids</h1>
             <h2>About Us</h2>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-            <a href="" class="button">buy now</a>
+            <a href="#" class="button">buy now</a>
         </section>
         <section class="contacts">
             <h1>Contacts</h1>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-            <img src="" alt="">
+            <img src="img.png" alt="">
         </section>
     </main>
     <footer>
@@ -155,25 +155,26 @@
             </nav>
         </section>
         <section class="connect">
+            <h2>Connect</h2>
             <div class="form">
                 <p><input name="mail" type="email" placeholder="Email"></p>
                 <button class="button">Join</button>
             </div>
             <ul class="social">
-                <li><a href="" target="_blanK">
-                    <img src="" alt="">
+                <li><a href="#" target="_blanK">
+                    <img src="img.png" alt="">
                     </a>
                 </li>
-                <li><a href="" target="_blanK">
-                    <img src="" alt="">
+                <li><a href="#" target="_blanK">
+                    <img src="img.png" alt="">
                     </a>
                 </li>
-                <li><a href="" target="_blanK">
-                    <img src="" alt="">
+                <li><a href="#" target="_blanK">
+                    <img src="img.png" alt="">
                     </a>
                 </li>
-                <li><a href="" target="_blanK">
-                    <img src="" alt="">
+                <li><a href="#" target="_blanK">
+                    <img src="img.png" alt="">
                     </a>
                 </li>
             </ul>
@@ -181,12 +182,11 @@
         <section class="copyright">
             <div class="rating">
                 <h2>Company Rating</h2>
-                <img src alt="">
-                <img src alt="">
-                <img src alt="">
-                <img src alt="">
+                <img src="img.png" alt="">
+                <img src="img.png" alt="">
+                <img src="img.png" alt="">
+                <img src="img.png" alt="">
             </div>
-            
             <h2>Copyright © 2018 Dlk • Design Life Kids</h2>
             <h2>Web Design — Direct Line Development</h2>
         </section>
