--- a/index.html
+++ b/index.html
@@ -31,37 +31,29 @@
             </div>
         </section>
         <section class="products">
-            <h1>Category Products</h1>
+            <h2>Category Products</h2>
             <ul>
                 <li>
                     <a href="#">
                         <img src="img.png" alt="">
-                    </a>
-                    <a href="#">
                         <p>APPAREL KIDS</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="img.png" alt="">
-                    </a>
-                    <a href="#">
                         <p>HOLIDAY SHOP</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="img.png" alt="">
-                    </a>
-                    <a href="#">
                         <p>TOYS</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="img.png" alt="">
-                    </a>
-                    <a href="#">
                         <p>ACCESSORIES</p>
                     </a>
                 </li>
@@ -77,7 +69,7 @@
         <section class="delivery">
             <img src="img.png" alt="">
             <div>
-                <h1>Delivery</h1>
+                <h2>Delivery</h2>
                 <div class="tabs">
                     <input type="radio" name="tabs" id="tab-first" checked >
                     <label for="tab-first">
@@ -92,7 +84,9 @@
                         <p>Credit</p>
                     </label>
                     <div id="tab-content-1" class="tab-content">
-                        <p>content-1</p>
+                        <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.
+                        </p>
+                        <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                     </div> 
                     <div id="tab-content-2" class="tab-content">
                         <p>content-2</p>
@@ -101,8 +95,6 @@
                         <p>content-3</p>
                     </div> 
                 </div>
-                    <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-                    <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                 <button class="button">LEARN MORE</button>
             </div>
         </section>
@@ -116,19 +108,19 @@
             </ul>    
         </section>
         <section class="about">
-            <h1>Design Life Kids</h1>
-            <h2>About Us</h2>
+            <h2>Design Life Kids</h2>
+            <h3>About Us</h3>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
             <a href="#" class="button">buy now</a>
         </section>
         <section class="contacts">
-            <h1>Contacts</h1>
+            <h2>Contacts</h2>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
             <img src="img.png" alt="">
         </section>
     </main>
     <footer>
-        <section class="navigation">
+        <div class="navigation">
             <h2>Navigation</h2>
             <nav>
                 <ul>
@@ -140,8 +132,8 @@
                     <li><a href="#">Shop By Designer</a></li>       
                 </ul>
             </nav>
-        </section>
-        <section class="customer">
+        </div>
+        <div class="customer">
             <h2>Customer Information</h2>
             <nav>
                 <ul>
@@ -153,8 +145,8 @@
                     <li><a href="#">Search</a></li>       
                 </ul>
             </nav>
-        </section>
-        <section class="connect">
+        </div>
+        <div class="connect">
             <h2>Connect</h2>
             <div class="form">
                 <p><input name="mail" type="email" placeholder="Email"></p>
@@ -178,18 +170,18 @@
                     </a>
                 </li>
             </ul>
-        </section>
-        <section class="copyright">
+        </div>
+        <div class="copyright">
             <div class="rating">
-                <h2>Company Rating</h2>
+                <p>Company Rating</p>
                 <img src="img.png" alt="">
                 <img src="img.png" alt="">
                 <img src="img.png" alt="">
                 <img src="img.png" alt="">
             </div>
-            <h2>Copyright © 2018 Dlk • Design Life Kids</h2>
-            <h2>Web Design — Direct Line Development</h2>
-        </section>
+            <p>Copyright © 2018 Dlk • Design Life Kids</p>
+            <a href="https://directline.digital/"> Web Design — Direct Line Development</a>
+        </div>
     </footer>
 </body>
 </html>
