--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main page</title>
+    <title>Catalog</title>
 </head>
 <body>
     <header>
@@ -24,20 +24,15 @@
         <a href="#">Contact us</a>
     </header>
     <main>
-        <section class="slider">
-            <h1>THE OOH NOO COLLECTION</h1>
-            <p>Designed in Slovenia</p>
-            <button class="button">EXPLORE NOW</button>
-            <img src="images/slider1.png" alt="" class="slide1">
-            <img src="img.png" alt="" class="slide2">
-            <img src="img.png" alt="" class="slide3">
-            <img src="img.png" alt="" class="slide4">
-            <div>
-                <p>Free (continental) USA shipping on all orders of $100 USD or more!</p>
-            </div>
-        </section>
+        <h2>Category Products</h2>
+        <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="#">Home</a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="#">Catalog</a>
+            </li>
         <section class="products">
-            <h2>Category Products</h2>
             <ul>
                 <li>
                     <a href="#">
@@ -63,73 +58,25 @@
                         <p>ACCESSORIES</p>
                     </a>
                 </li>
+                <li>
+                    <a href="#">
+                        <img src="images/prod5.jpg" alt="">
+                        <p>SALE</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="images/prod6.jpg" alt="">
+                        <p>APPAREL ADULTS</p>
+                    </a>
+                </li>
             </ul>
-            <div>
-                <button class="button"><svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-width="4"/>
-                    </svg>
-                    </button>
-            </div>
-            <div>
-                <button class="button"><svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="37" height="37" fill="#70BBDC" fill-opacity="0.2"/>
-                    <path d="M12 5L25 18L12 31" stroke="#1E0606" stroke-width="4"/>
-                    </svg>
-                    </button>
-            </div>
-            <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
         </section>
-        <section class="delivery">
-            <img src="images/delivery.jpg" alt="">
-            <div>
-                <h2>Delivery</h2>
-                <div class="tabs">
-                    <input type="radio" name="tabs" id="tab-first" checked >
-                    <label for="tab-first">
-                        <p>Delivery</p>
-                    </label>
-                    <input type="radio" name="tabs" id="tab-second">
-                    <label for="tab-second">
-                        <p>Guarantee</p>
-                    </label>
-                    <input type="radio" name="tabs" id="tab-third">
-                    <label for="tab-third">
-                        <p>Credit</p>
-                    </label>
-                    <div id="tab-content-1" class="tab-content">
-                        <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.
-                        </p>
-                        <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
-                    </div> 
-                    <div id="tab-content-2" class="tab-content">
-                        <p>content-2</p>
-                    </div> 
-                    <div id="tab-content-3" class="tab-content">
-                        <p>content-3</p>
-                    </div> 
-                </div>
-                <button class="button">LEARN MORE</button>
-            </div>
-        </section>
-        <section class="brands">
-            <h2 class="hidden">Brands</h2>
-            <ul>
-                <li><img src="images/brand1.png" alt=""></li>
-                <li><img src="images/brand2.png" alt=""></li>
-                <li><img src="images/brand3.png" alt=""></li>
-                <li><img src="images/brand4.png" alt=""></li>
-            </ul>    
-        </section>
-        <section class="about">
-            <h2>Design Life Kids</h2>
-            <h3>About Us</h3>
-            <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-            <a href="#" class="button">buy now</a>
-        </section>
-        <section class="contacts">
-            <h2>Contacts</h2>
-            <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-            <img src="images/maps.jpg" alt="">
+        <section class="description">
+            <h2>Product Description</h2>
+            <p>Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
+            <p>A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
+            <p>The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
         </section>
     </main>
     <footer>
