--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </li>
             </ul>
             <div>
-                <button class="button"><svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="submit" class="button"><svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-width="4"/>
                     </svg>
                     </button>
@@ -129,7 +129,10 @@
         <section class="contacts">
             <h2>Contacts</h2>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-            <img src="images/maps.jpg" alt="">
+            <div class="map">
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae975d5d0230c97fc17fe4170bcd64da9bd5d640035324b55dcba715d358a7b22&amp;source=constructor" width="483" height="196 frameborder="0" style="border:0"></iframe>
+                
+            </div>
         </section>
     </main>
     <footer>
@@ -161,10 +164,11 @@
         </div>
         <div class="connect">
             <h2>Connect</h2>
-            <div class="form">
-                <p><input name="mail" type="email" placeholder="Email"></p>
-                <button class="button">Join</button>
-            </div>
+            <form action="#" method="POST" class="">
+                <fieldset class="">
+                    <div class=""><input name="mail" type="email" placeholder="Email"></div>
+                </fieldset>
+                <button type="submit">Join</button>
             <ul class="social">
                 <li><a href="#" target="_blanK">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -216,5 +220,40 @@
             <a href="https://directline.digital/"> Web Design — Direct Line Development</a>
         </div>
     </footer>
+    
+    <div class="modal_form">
+        <h1 class="hidden">Modal window</h1>
+        <form action="#" method="POST" class="form_body">
+            <fieldset class="form_fieldset">
+                <div class="form_item">
+                    <label for="formName" class="form_label">Name</label>
+                    <input id="formName" type="text" name="name" class="form_input">
+                </div>
+            </fieldset>
+            <fieldset class="form_fieldset">
+                <div class="form_item">
+                    <label for="formPhone" class="form_label">Phone</label>
+                    <input id="formPhone" type="tel" name="phone" class="form_input" pattern="+7 (908) 296-13-78">
+                </div>
+                <div class="form_item">
+                    <label for="formEmail" class="form_label">Email</label>
+                    <input id="formEmail" type="text" name="email" class="form_input">
+                </div>
+            </fieldset>
+            <fieldset class="form_fieldset">
+                <div class="form_item">
+                    <label for="formMessage" class="form_label">Message</label>
+                    <textarea id="formMessage" type="text" name="message" class="form_textarea"></textarea>
+                </div>
+            </fieldset>
+            <fieldset class="checkbox_fieldset">
+                <div class="checkbox">
+                    <input id="formAgreement" type="checkbox" name="agreement" class="checkbox_input">
+                    <label for="formAgreement" class="checkbox_label"><span>By clicking on the button, you consent to the processing of your personal data</span>></label>
+                </div>
+            </fieldset>
+            <button class="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
