Внесла изменения в index.html и catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
         <a href="#">Contact us</a>
     </header>
     <main>
-        <h2>Category Products</h2>
+        <h1>Category Products</h1>
         <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="#">Home</a>
@@ -37,37 +37,37 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="images/prod1.jpg" alt="">
+                        <img src="images/prod1.jpg" alt="" width="280" height="270">
                         <p>APPAREL KIDS</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod2.jpg" alt="">
+                        <img src="images/prod2.jpg" alt="" width="280" height="270">
                         <p>HOLIDAY SHOP</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod3.jpg" alt="">
+                        <img src="images/prod3.jpg" alt="" width="280" height="270">
                         <p>TOYS</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod4.jpg" alt="">
+                        <img src="images/prod4.jpg" alt="" width="280" height="270">
                         <p>ACCESSORIES</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod5.jpg" alt="">
+                        <img src="images/prod5.jpg" alt="" width="280" height="270">
                         <p>SALE</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod6.jpg" alt="">
+                        <img src="images/prod6.jpg" alt="" width="280" height="270">
                         <p>APPAREL ADULTS</p>
                     </a>
                 </li>
