--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="images/prod1.jpg" alt="">
+                        <img src="images/prod1.jpg" alt="" width="280" height="270">
                         <p>APPAREL KIDS</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod2.jpg" alt="">
+                        <img src="images/prod2.jpg" alt="" width="280" height="270">
                         <p>HOLIDAY SHOP</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod3.jpg" alt="">
+                        <img src="images/prod3.jpg" alt="" width="280" height="270">
                         <p>TOYS</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="images/prod4.jpg" alt="">
+                        <img src="images/prod4.jpg" alt="" width="280" height="270">
                         <p>ACCESSORIES</p>
                     </a>
                 </li>
@@ -80,7 +80,7 @@
             <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
         </section>
         <section class="delivery">
-            <img src="images/delivery.jpg" alt="">
+            <img src="images/delivery.jpg" alt="" width="480" height="559">
             <div>
                 <h2>Delivery</h2>
                 <div class="tabs">
@@ -114,10 +114,10 @@
         <section class="brands">
             <h2 class="hidden">Brands</h2>
             <ul>
-                <li><img src="images/brand1.png" alt=""></li>
-                <li><img src="images/brand2.png" alt=""></li>
-                <li><img src="images/brand3.png" alt=""></li>
-                <li><img src="images/brand4.png" alt=""></li>
+                <li><img src="images/brand1.png" alt="" width="193" height="60"></li>
+                <li><img src="images/brand2.png" alt="" width="179" height="61"></li>
+                <li><img src="images/brand3.png" alt="" width="216" height="46"></li>
+                <li><img src="images/brand4.png" alt="" width="211" height="40"></li>
             </ul>    
         </section>
         <section class="about">
@@ -130,7 +130,7 @@
             <h2>Contacts</h2>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
             <div class="map">
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae975d5d0230c97fc17fe4170bcd64da9bd5d640035324b55dcba715d358a7b22&amp;source=constructor" width="483" height="196 frameborder="0" style="border:0"></iframe>
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae975d5d0230c97fc17fe4170bcd64da9bd5d640035324b55dcba715d358a7b22&amp;source=constructor" width="483" height="196" frameborder="0" style="border:0"></iframe>
                 
             </div>
         </section>
