--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <svg class="header-search" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M14.365 3.26001C10.945 3.26001 8.16497 6.08001 8.16497 9.52001C8.16497 10.98 8.66497 12.3 9.48497 13.38L3.60498 19.32C3.26498 19.68 3.26498 20.24 3.60498 20.58C3.78498 20.76 4.00498 20.84 4.22498 20.84C4.46498 20.84 4.68497 20.76 4.86497 20.58L10.745 14.62C11.765 15.36 13.005 15.78 14.345 15.78C17.765 15.78 20.545 12.96 20.545 9.52001C20.565 6.06001 17.785 3.26001 14.365 3.26001ZM14.365 14.2C11.825 14.2 9.76497 12.1 9.76497 9.52001C9.76497 6.94001 11.825 4.84001 14.365 4.84001C16.905 4.84001 18.965 6.94001 18.965 9.52001C18.965 12.1 16.905 14.2 14.365 14.2ZM17.465 9.60001C17.425 9.94001 17.125 10.2 16.785 10.2C16.745 10.2 16.725 10.2 16.685 10.2C16.305 10.14 16.045 9.80001 16.085 9.42001C16.225 8.38001 15.065 7.84001 15.005 7.82001C14.665 7.66001 14.505 7.24001 14.665 6.90001C14.825 6.56001 15.225 6.40001 15.585 6.54001C15.665 6.56001 17.745 7.52001 17.465 9.60001ZM16.005 11.12C16.145 11.26 16.245 11.48 16.245 11.68C16.245 11.9 16.165 12.1 16.005 12.24C15.865 12.38 15.645 12.48 15.445 12.48C15.245 12.48 15.025 12.4 14.885 12.24C14.745 12.1 14.645 11.88 14.645 11.68C14.645 11.48 14.725 11.26 14.885 11.12C15.025 10.98 15.245 10.88 15.445 10.88C15.645 10.88 15.845 10.96 16.005 11.12Z" fill="#1E0606"/>
         </svg>
-        <a class="contacts" href="#">Contact us</a>
+        <a class="header-contacts" href="#">Contact us</a>
     </header>
     <main>
         <section class="slider container">
@@ -82,14 +82,14 @@
                 </li>
             </ul>
             <div class="products-info">
-                <button class="btn-control"><svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-width="4"/>
-                    </svg>
+                <button class="btn-control"><svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="37" height="37" fill="#70BBDC" fill-opacity="0.2"/>
+                    <path d="M25 5L12 18L25 31" stroke="#1E0606" stroke-width="4"/></svg>                    
                 </button>
                 <button class="btn-control"><svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="37" height="37" fill="#70BBDC" fill-opacity="0.2"/>
                     <path d="M12 5L25 18L12 31" stroke="#1E0606" stroke-width="4"/>
-                    </svg>
+                    </svg>                    
                 </button>
             <div>
                 <p class="info_item">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
@@ -228,10 +228,13 @@
 
     <div class="footer-second-block">   
         <div class="footer-copyright">
-            <div class="copyright-item">
+            <div class="rating-item">
                 <p>Company Rating</p>
             </div>
-            <div class="copyright-item">
+            <div class="rating-item">
+                <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
+                </svg>
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                 </svg>
@@ -259,36 +262,35 @@
 
 
 
-
-    <div class="modal_form">
+    <div class="modal-form">
         <h1 class="hidden">Modal window</h1>
-        <form action="#" method="POST" class="form_body">
-            <fieldset class="form_fieldset">
-                <div class="form_item">
-                    <label for="formName" class="form_label">Name</label>
-                    <input id="formName" type="text" name="name" class="form_input">
+        <form action="#" method="POST" class="form-body">
+            <fieldset class="form-fieldset">
+                <div class="form-item">
+                    <label for="form-name" class="form-label">Name</label>
+                    <input id="form-name" type="text" name="name" class="form-input">
                 </div>
             </fieldset>
-            <fieldset class="form_fieldset">
-                <div class="form_item">
-                    <label for="formPhone" class="form_label">Phone</label>
-                    <input id="formPhone" type="tel" name="phone" class="form_input" pattern="+7 (908) 296-13-78">
+            <fieldset class="form-fieldset">
+                <div class="form-item">
+                    <label for="form-phone" class="form-label">Phone</label>
+                    <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">
                 </div>
-                <div class="form_item">
-                    <label for="formEmail" class="form_label">Email</label>
-                    <input id="formEmail" type="text" name="email" class="form_input">
-                </div>
-            </fieldset>
-            <fieldset class="form_fieldset">
-                <div class="form_item">
-                    <label for="formMessage" class="form_label">Message</label>
-                    <textarea id="formMessage" type="text" name="message" class="form_textarea"></textarea>
+                <div class="form-item">
+                    <label for="form-email" class="form-label">Email</label>
+                    <input id="form-email" type="text" name="email" class="form-input">
                 </div>
             </fieldset>
-            <fieldset class="checkbox_fieldset">
+            <fieldset class="form-fieldset">
+                <div class="form-item">
+                    <label for="form-message" class="form-label">Message</label>
+                    <textarea id="form-message" type="text" name="message" class="form-textarea"></textarea>
+                </div>
+            </fieldset>
+            <fieldset class="checkbox-fieldset">
                 <div class="checkbox">
-                    <input id="formAgreement" type="checkbox" name="agreement" class="checkbox_input">
-                    <label for="formAgreement" class="checkbox_label"><span>By clicking on the button, you consent to the processing of your personal data</span>></label>
+                    <input id="form-agreement" type="checkbox" name="agreement" class="checkbox-input">
+                    <label for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span>></label>
                 </div>
             </fieldset>
             <button class="submit">Submit</button>
