Стилизовала модальное окно, внесла правки в css

--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Catalog</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="catalog.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/catalog.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -30,10 +31,10 @@
         </svg>
         <a class="header-contacts" href="#">Contact us</a>
     </header>
-    <main>
-        <h1 class="page-title container">Category Products</h1>
+    <main class="container">
+        <h1 class="page-title">Category Products</h1>
            <div class="breadcrumbs">
-            <ul class="breadcrumbs-list container">
+            <ul class="breadcrumbs-list">
                 <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="#">Home</a>
                 </li>
@@ -42,53 +43,53 @@
                 </li>
             </ul>
         </div>
-        <section class="products container">
+        <section class="products">
             <ul class="outline products-list">
-                <li class="products-item">
-                    <div class="container-link">
+                <li class="products-item first-product">
+                    <div class="container-link ">
                     <a href="#">
-                        <img src="images/prod1.jpg" alt="" width="280" height="270">
+                        <img src="#" alt="" width="244" height="177">
                         <p class="title-link">APPAREL KIDS</p>
                     </a>
                 </div>
                 </li>
-                <li class="products-item">
-                    <div class="container-link">
+                <li class="products-item second-product">
+                    <div class="container-link ">
                         <a href="#">
-                            <img src="images/prod2.jpg" alt="" width="280" height="270">
+                            <img  src="#" alt="" width="208" height="244">
                             <p class="title-link">HOLIDAY SHOP</p>
                         </a>
                     </div>
                     
                 </li>
-                <li class="products-item">
+                <li class="products-item third-product">
                     <div class="container-link">
                        <a href="#">
-                        <img src="images/prod3.jpg" alt="" width="280" height="270">
+                        <img src="#" alt="" width="270" height="270">
                         <p class="title-link">TOYS</p>
                     </a>  
                     </div>
                 </li>
-                <li class="products-item">
+                <li class="products-item fourth-product">
                     <div class="container-link">
                         <a href="#">
-                            <img src="images/prod4.jpg" alt="" width="280" height="270">
+                            <img src="#" alt="" width="280" height="270">
                             <p class="title-link">ACCESSORIES</p>
                         </a>
                     </div>
                 </li>
-                <li class="products-item">
+                <li class="products-item fifth-product">
                     <div class="container-link">
                         <a href="#">
-                            <img src="images/prod5.jpg" alt="" width="280" height="270">
+                            <img src="#" alt="" width="248" height="248">
                             <p class="title-link">SALE</p>
                         </a>
                     </div>
                 </li>
-                <li class="products-item">
+                <li class="products-item sixth-product">
                     <div class="container-link">
                     <a href="#">
-                        <img src="images/prod6.jpg" alt="" width="280" height="270">
+                        <img  src="#" alt="" width="271" height="204">
                         <p class="title-link">APPAREL ADULTS</p>
                     </a>
                     </div>
