--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -28,10 +29,10 @@
         <svg class="header-search" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M14.365 3.26001C10.945 3.26001 8.16497 6.08001 8.16497 9.52001C8.16497 10.98 8.66497 12.3 9.48497 13.38L3.60498 19.32C3.26498 19.68 3.26498 20.24 3.60498 20.58C3.78498 20.76 4.00498 20.84 4.22498 20.84C4.46498 20.84 4.68497 20.76 4.86497 20.58L10.745 14.62C11.765 15.36 13.005 15.78 14.345 15.78C17.765 15.78 20.545 12.96 20.545 9.52001C20.565 6.06001 17.785 3.26001 14.365 3.26001ZM14.365 14.2C11.825 14.2 9.76497 12.1 9.76497 9.52001C9.76497 6.94001 11.825 4.84001 14.365 4.84001C16.905 4.84001 18.965 6.94001 18.965 9.52001C18.965 12.1 16.905 14.2 14.365 14.2ZM17.465 9.60001C17.425 9.94001 17.125 10.2 16.785 10.2C16.745 10.2 16.725 10.2 16.685 10.2C16.305 10.14 16.045 9.80001 16.085 9.42001C16.225 8.38001 15.065 7.84001 15.005 7.82001C14.665 7.66001 14.505 7.24001 14.665 6.90001C14.825 6.56001 15.225 6.40001 15.585 6.54001C15.665 6.56001 17.745 7.52001 17.465 9.60001ZM16.005 11.12C16.145 11.26 16.245 11.48 16.245 11.68C16.245 11.9 16.165 12.1 16.005 12.24C15.865 12.38 15.645 12.48 15.445 12.48C15.245 12.48 15.025 12.4 14.885 12.24C14.745 12.1 14.645 11.88 14.645 11.68C14.645 11.48 14.725 11.26 14.885 11.12C15.025 10.98 15.245 10.88 15.445 10.88C15.645 10.88 15.845 10.96 16.005 11.12Z" fill="#1E0606"/>
         </svg>
-        <a class="contacts" href="#">Contact us</a>
+        <a class="header-contacts" href="#">Contact us</a>
     </header>
-    <main>
-        <h1>Contact  Us</h1>
+    <main class="container">
+        <h1 class="page-title">Contact  Us</h1>
         <div class="breadcrumbs">
             <ul class="breadcrumbs-list">
                 <li class="breadcrumbs-item">
@@ -43,43 +44,43 @@
             </ul>
         </div> 
 
-        <section class="contacts-form">
-            <form action="#" method="POST" class="form-body">
-            <fieldset class="form-fieldset">
-                <div class="form-item">
+        <section class="contacts-box">
+            <form action="#" method="POST" class="contact-form">
+            <fieldset class="">
+                <div class="form-name">
                     <label for="form-name" class="form-label">Name</label>
-                    <input id="form-name" type="text" name="name" class="form-input">
+                    <input class="form-name" id="form-name" type="text" name="name" class="form-input" placeholder="Ivan Ivanov">                    
                 </div>
             </fieldset>
-            <fieldset class="form-fieldset">
-                <div class="form-item">
-                    <label for="form-phone" class="form-label">Phone</label>
-                    <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">
+            <fieldset class="contact-wrapper">
+                <div class="contact-wrapper contact-block">  
+                    <label for="form-phone" class="form-label">Phone</label>                  
+                    <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">                   
                 </div>
-                <div class="form-item">
-                    <label for="form-email" class="form-label">Email</label>
-                    <input id="form-email" type="text" name="email" class="form-input">
-                </div>
-            </fieldset>
-            <fieldset class="form-fieldset">
-                <div class="form-item">
-                    <label for="form-message" class="form-label">Message</label>
-                    <textarea id="form-message" type="text" name="message" class="form-textarea"></textarea>
+                <div class="contact-wrapper contact-block">   
+                    <label for="form-email" class="form-label">Email</label>                 
+                    <input id="form-email" type="text" name="email" class="form-input">                    
                 </div>
             </fieldset>
-            <fieldset class="checkbox-fieldset">
+            <fieldset class="contact-wrapper">
+                <div class="">
+                    <label for="form-message" class="form-label">Message</label>                    
+                    <textarea id="form-message" type="text" name="message" class="form-textarea"></textarea>                    
+                </div>
+            </fieldset>
+            <fieldset >
                 <div class="checkbox">
-                    <input id="form-agreement" type="checkbox" name="agreement" class="checkbox-input">
-                    <label for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span>></label>
+                    <input class="input"  id="form-agreement" type="checkbox" name="agreement">
+                    <label  for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
                 </div>
             </fieldset>
-            <button class="submit">Submit</button>
+            <button class="button" type="submit">Submit</button>
         </form>
                         
             <div class="support">
                 <p>Our support team are on-hand to assist with any issues you are experiencing.</p>
                 <p>Please use the form to contact us with your needs. Send us a message and we'll respond as soon as possible.</p>
-                <p>An expert is waiting to help you!</p>
+                <p class="support-item">An expert is waiting to help you!</p>
             </div>
     </section>
     </main>
