--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Main page</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
         <section class="slider container">
            <div class="slider-content"> 
             <div class="slider-first-block">  
-                <h1 class="slider-title">THE OOH NOO COLLECTION</h1>
+                <h1 class="page-title">THE OOH NOO COLLECTION</h1>
                 <p class="slider-item">Designed in Slovenia</p>
                 <button class=" button slider-btn">EXPLORE NOW</button>
             </div>   
@@ -116,12 +116,12 @@
                         </p>
                         <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                     </div> 
-                    <div id="tab-content-2" class="tab-content">
+                    <!-- <div id="tab-content-2" class="tab-content">
                         <p>content-2</p>
                     </div> 
                     <div id="tab-content-3" class="tab-content">
                         <p>content-3</p>
-                    </div> 
+                    </div>  -->
                 </div>
                 <button class="button delivery-btn">LEARN MORE</button>
             </div>
@@ -141,7 +141,7 @@
                 <h2 class="about-title">Design Life Kids</h2>
                 <h3 class="about-title-second">About Us</h3>
                 <p class="about-item">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-                <a href="#" class=" button about-btn">buy now</a>
+                <a href="#" class="button about-btn">buy now</a>
             </div>
         
         <div class="contacts-content">
@@ -259,36 +259,36 @@
 
     <div class="modal-form">
         <h1 class="hidden">Modal window</h1>
-        <form action="#" method="POST" class="form-body">
-            <fieldset class="form-fieldset">
-                <div class="form-item">
+        <form action="#" method="POST" class="contact-form">
+            <fieldset class="">
+                <div class="form-name">
                     <label for="form-name" class="form-label">Name</label>
-                    <input id="form-name" type="text" name="name" class="form-input">
+                    <input class="form-name" id="form-name" type="text" name="name" class="form-input" placeholder="Ivan Ivanov">                    
                 </div>
             </fieldset>
-            <fieldset class="form-fieldset">
-                <div class="form-item">
-                    <label for="form-phone" class="form-label">Phone</label>
-                    <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">
+            <fieldset class="contact-wrapper">
+                <div class="contact-wrapper contact-block">  
+                    <label for="form-phone" class="form-label">Phone</label>                  
+                    <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">                   
                 </div>
-                <div class="form-item">
-                    <label for="form-email" class="form-label">Email</label>
-                    <input id="form-email" type="text" name="email" class="form-input">
-                </div>
-            </fieldset>
-            <fieldset class="form-fieldset">
-                <div class="form-item">
-                    <label for="form-message" class="form-label">Message</label>
-                    <textarea id="form-message" type="text" name="message" class="form-textarea"></textarea>
+                <div class="contact-wrapper contact-block">   
+                    <label for="form-email" class="form-label">Email</label>                 
+                    <input id="form-email" type="text" name="email" class="form-input">                    
                 </div>
             </fieldset>
-            <fieldset class="checkbox-fieldset">
+            <fieldset class="contact-wrapper">
+                <div class="">
+                    <label for="form-message" class="form-label">Message</label>                    
+                    <textarea id="form-message" type="text" name="message" class="form-textarea"></textarea>                    
+                </div>
+            </fieldset>
+            <fieldset >
                 <div class="checkbox">
-                    <input id="form-agreement" type="checkbox" name="agreement" class="checkbox-input">
-                    <label for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span>></label>
+                    <input class="input"  id="form-agreement" type="checkbox" name="agreement">
+                    <label  for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
                 </div>
             </fieldset>
-            <button class="submit">Submit</button>
+            <button class="button" type="submit">Submit</button>
         </form>
     </div>
 </body>
