Создала script.js и внесла правки в стили

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <fieldset class="contact-wrapper">
                 <div class="contact-wrapper contact-block">  
                     <label for="form-phone" class="form-label">Phone</label>                  
-                    <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">                   
+                    <input id="form-phone" type="tel" name="phone" class="form-input-phone" pattern="+7 (908) 296-13-78">                   
                 </div>
                 <div class="contact-wrapper contact-block">   
                     <label for="form-email" class="form-label">Email</label>                 
@@ -63,9 +63,9 @@
                 </div>
             </fieldset>
             <fieldset class="contact-wrapper">
-                <div class="">
+                <div>
                     <label for="form-message" class="form-label">Message</label>                    
-                    <textarea id="form-message" type="text" name="message" class="form-textarea"></textarea>                    
+                    <textarea id="form-message" type="text" name="message" class="form-textarea" cols="30" rows="3"></textarea>                    
                 </div>
             </fieldset>
             <fieldset >
