Внесла правки в css

--- a/toys.html
+++ b/toys.html
@@ -54,7 +54,7 @@
                                     <legend>Cost</legend>  
                                     <div class="range-slider">
                                         <output for="fader" id="volume">0</output>
-                                        <input  type="range" id="fader" min="0" max="600" step="1" value="0">
+                                        <input class="fader" type="range" id="fader" min="0" max="600" step="1" value="0">
                                     </div>            
                                 </div>
                             </fieldset>            
@@ -91,15 +91,15 @@
                             <fieldset class="amount-box">
                                 <legend>Amount</legend>
                                 <div class="form-radio-btn ">
-                                    <input id="radio-1" type="radio" name="radio" value="1" checked>
+                                    <input class="radio-amount" id="radio-1" type="radio" name="radio" value="1" checked>
                                     <label  for="radio-1">0-5</label>
                                 </div>                                 
                                 <div class="form-radio-btn">
-                                    <input id="radio-2" type="radio" name="radio" value="2">
+                                    <input  class="amount" id="radio-2" type="radio" name="radio" value="2">
                                     <label for="radio-2">10-20</label>
                                 </div>                                 
                                 <div class="form-radio-btn">
-                                    <input id="radio-3" type="radio" name="radio" value="3">
+                                    <input  class="amount" id="radio-3" type="radio" name="radio" value="3">
                                     <label for="radio-3">20-50</label>
                                 </div>                                           
                             </fieldset>                                                               
@@ -117,7 +117,7 @@
                 <li class="products-item">
                     <div class="container-link">
                         <a href="#">
-                            <img class="products-img" src="images/toy1.jpg" alt="" width="280" height="270">
+                            <img class="products-img" src="images/toy1.jpg" alt="" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">SHARKY BEAN BAG CHAIR COVER</p>
@@ -128,7 +128,7 @@
                 <li class="products-item">
                     <div class="container-link">
                         <a href="#">
-                            <img src="images/toy2.jpg" alt="" width="280" height="270">
+                            <img src="images/toy2.jpg" alt="" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">BRASS DECO FRAMES</p>
@@ -139,7 +139,7 @@
                 <li class="products-item">
                     <div class="container-link">
                         <a href="#">
-                            <img src="images/toy3.jpg" alt="" width="280" height="270">
+                            <img src="images/toy3.jpg" alt="" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">CIBO FULL APRON</p>
@@ -150,7 +150,7 @@
                 <li class="products-item">
                     <div class="container-link">
                         <a href="#">
-                            <img src="images/toy4.jpg" alt="" width="280" height="270">
+                            <img src="images/toy4.jpg" alt="" width="380" height="385">
                         </a>
                         <a href="#">
                             <p class="title-link">GATCHA GATCHA GUMBALL MACHINE</p>
@@ -161,7 +161,7 @@
                 <li class="products-item">
                     <div class="container-link">
                         <a href="#">
-                        <img src="images/toy5.jpg" alt="" width="280" height="270">
+                        <img src="images/toy5.jpg" alt="" width="380" height="385">
                     </a>
                     <a href="#">
                         <p class="title-link">CHRISTMAS ADVENT SCENTED CANDLE</p>
@@ -172,7 +172,7 @@
                 <li class="products-item">
                     <div class="container-link">
                         <a href="#">
-                            <img src="images/toy6.jpg" alt="" width="280" height="270">
+                            <img src="images/toy6.jpg" alt="" width="380" height="382">
                         </a>
                         <a href="#">
                             <p class="title-link">TANGLE SPINNING TEA LIGHT</p>
