--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header container">
+    <header class="header container" id="bottom">
         <a href="#">
             <svg class="header-logo" width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
@@ -32,7 +32,7 @@
         <a class="header-contacts" href="#">Contact us</a>
     </header>
     <main>
-        <section class="slider container">
+        <section class="slider container">                   
            <div class="slider-content">             
                 <div class="toggle-content">
                  <ul class="toggle-list">
@@ -70,7 +70,7 @@
             </div>   
                 <img class="slider-img"src="images/slider1.png" alt="">
             </div>
-            <p class="slider-info">Free (continental) USA shipping on all orders of $100 USD or more!</p>                           
+            <p class="slider-info">Free (continental) USA shipping on all orders of $100 USD or more!</p>                                 
         </section>
         <section class="products container">
                 <h2 class="products-title">Category Products</h2>
@@ -127,31 +127,31 @@
         </section>
         </section>
         <section class="delivery container">
-            <img src="images/delivery.jpg" alt="" width="480" height="559">
+            <img class="delivery-img" src="images/delivery.jpg" alt="" width="480" height="559">
             <div class="delivery-info">
                 <h2 class="delivery-title">Delivery</h2>
                 <div class="delivery-tabs">
-                    <input  class="delivery-input" type="radio" name="tabs" id="tab-first">
-                    <label for="tab-first">
+                    <input  class="delivery-input" type="radio" name="tabs" id="tab-first" checked>
+                    <label class="tab-first" for="tab-first">
                         <p class="tabs-item checked">Delivery</p>
                     </label>
                     <input class="delivery-input" type="radio" name="tabs" id="tab-second">
-                    <label for="tab-second">
+                    <label class="tab-second" for="tab-second">
                         <p class="tabs-item">Guarantee</p>
                     </label>
                     <input class="delivery-input" type="radio" name="tabs" id="tab-third">
-                    <label for="tab-third">
+                    <label class="tab-third" for="tab-third">
                         <p class="tabs-item">Credit</p>
                     </label>
-                    <div id="tab-content-1" class="tab-content">
+                    <div class="tab-content-1" id="tab-content-1" class="tab-content">
                         <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.
                         </p>
                         <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                     </div> 
-                    <!-- <div id="tab-content-2" class="tab-content">
+                    <!-- <div  class="tab-content-2" id="tab-content-2" class="tab-content">
                         <p>content-2</p>
                     </div> 
-                    <div id="tab-content-3" class="tab-content">
+                    <div class="tab-content-3" id="tab-content-3" class="tab-content">
                         <p>content-3</p>
                     </div>  -->
                 </div>
@@ -281,7 +281,6 @@
     </div>
 </div>
 </footer>
-
 
     
     
